# bitcoff

./: .gitignore  Cargo.toml  README.md  run-get-utxos.rs  run-get-utxos.sh  run-offline-op-return.sh  run-online-op-return.sh  run.sh
examples/: encrypted-btc-private-key.gpg  make-offline-tx-output  run-get-pbtc-address.sh  run-get-utxos-for-address.sh  run-get-utxos.sh  run-make-pbtc-utxo-tx.sh  run-offline-op-return.sh  run-offline-tx.sh  run-online-op-return.sh  run-online-tx.sh
src/: base58.rs  btc_private_key.rs  btc_transaction.rs  constants.rs  create_op_return_tx.rs  create_tx.rs  errors.rs  extract_utxos_from_utxo_info.rs  get_btc_private_key.rs  get_btc_txs_from_tx_ids.rs  get_btc_txs_from_utxos_info.rs  get_cli_args.rs  get_pbtc_deposit_address.rs  get_utxo_json.rs  get_utxo_json_string.rs  get_utxos.rs  get_utxos_for_address.rs  get_utxos_info.rs  initialize_logger.rs  main.rs  make_offline_op_return_transaction.rs  make_offline_transaction.rs  make_online_op_return_transaction.rs  make_online_transaction.rs  make_op_return_transaction.rs  make_pbtc_utxo_tx.rs  make_transaction.rs  save_output.rs  state.rs  types.rs  usage_info.rs  utils.rs  utxo_codec.rs
src/lib/: base58.rs  btc_private_key.rs  btc_transaction.rs  create_op_return_tx.rs  create_tx.rs  errors.rs  extract_utxos_from_utxo_info.rs  get_btc_private_key.rs  get_btc_txs_from_utxos_info.rs  get_cli_args.rs  get_utxo_json_string.rs  get_utxos.rs  get_utxos_for_address.rs  get_utxos_info.rs  get_version_info.rs  initialize_logger.rs  make_offline_op_return_transaction.rs  make_online_transaction.rs  (+9 more)
(+18 files in other folders)
