[package]
name = "bitcoff"
version = "1.0.0"
authors = ["Greg Kapka <greg@kapka.co.uk>"]
edition = "2018"

[dependencies]
log = "0.4.8"
hex = "0.4.0"
rand = "0.7.2"
docopt = "1.1.0"
reqwest = "0.9.24"
bitcoin = "0.21.0"
simplelog = "0.7.3"
byteorder = "1.3.2"
serde_json = "1.0.40"
serde_derive = "1.0.101"
serde = { version = "1", features = ["derive"] }
secp256k1 = { version = "=0.15.0", features = ["recovery"] }
